flux/infrastructure/webapps/homepage/dashy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: webapps
  labels:
    app: dashy
spec:
  selector:
    app: dashy
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
