flux/infrastructure/webapps/homepage/dashy-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
  namespace: webapps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.becklab.cloud`)
      kind: Rule
      middlewares:
        - name: sso-admin-chain
          namespace: identity
      services:
        - name: dashy
          port: 8080
  tls:
    certResolver: letsencrypt-prod
    secretName: homepage-tls
